mdapi/Custom/objects/Claims__c.object
<CustomObject>
    <description>This is part of the Legal deployment.  This tracks key details relating to legal claims, foreclosures, etc.</description>
    <fields>
        <fullName>Active_or_Closed__c</fullName>
        <formula>CASE( Status_Old__c ,
&apos;Claim Received&apos;, &apos;Active&apos;,
&apos;Settlement Negotiations&apos;, &apos;Active&apos;,
&apos;Served Process for Lawsuit&apos;, &apos;Active&apos;,
&apos;Counsel Engaged&apos;, &apos;Active&apos;,
&apos;Dispositive Motion Pending&apos;, &apos;Active&apos;,
&apos;Answer Filed&apos;, &apos;Active&apos;,
&apos;Case Dismissed&apos;, &apos;Closed&apos;,
&apos;Hearing Scheduled&apos;, &apos;Active&apos;,
&apos;In Discovery Period&apos;, &apos;Active&apos;,
&apos;Awaiting Trial&apos;, &apos;Active&apos;,
&apos;Trial Concluded&apos;, &apos;Active&apos;,
&apos;In Appeal&apos;, &apos;Active&apos;,
&apos;Case Closed&apos;, &apos;Closed&apos;,
null)</formula>
        <label>Active or Closed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <inlineHelpText>This field auto-populates from the Contact&apos;s mailing address.</inlineHelpText>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <label>Appeal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Closed__c</fullName>
        <label>Case Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Dismissed__c</fullName>
        <label>Case Dismissed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Type_Old__c</fullName>
        <inlineHelpText>Use the value in this field to populate these new fields:  Claim Type, Category, Sub-Category.  Once this is done for all Claims, this field will be removed.</inlineHelpText>
        <label>Case Type Old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Breach of Contract</fullName>
                </value>
                <value>
                    <fullName>Contract Dispute</fullName>
                </value>
                <value>
                    <fullName>Contract for Sale</fullName>
                </value>
                <value>
                    <fullName>Fair Housing</fullName>
                </value>
                <value>
                    <fullName>Foreclosure</fullName>
                </value>
                <value>
                    <fullName>Foreclosure/BK</fullName>
                </value>
                <value>
                    <fullName>Government Inquiry</fullName>
                </value>
                <value>
                    <fullName>HOA Foreclosure Sale</fullName>
                </value>
                <value>
                    <fullName>HOA Lien</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Leasing Prohibition</fullName>
                </value>
                <value>
                    <fullName>Liens &amp; Special Property Taxes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owners Policy</fullName>
                </value>
                <value>
                    <fullName>Personal Injury</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Title Curative</fullName>
                </value>
                <value>
                    <fullName>Trademark / IP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Claim_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Application Disputes / Issues</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Bodily Injury</fullName>
                </value>
                <value>
                    <fullName>Compliance / Governmental / Regulatory Agency</fullName>
                </value>
                <value>
                    <fullName>Construction Defect</fullName>
                </value>
                <value>
                    <fullName>Dog Attacks</fullName>
                </value>
                <value>
                    <fullName>EEOC Claims</fullName>
                </value>
                <value>
                    <fullName>EPA</fullName>
                </value>
                <value>
                    <fullName>Fair Housing</fullName>
                </value>
                <value>
                    <fullName>Fair Labor Standards Act (FLSA)</fullName>
                </value>
                <value>
                    <fullName>Family and Medical Leave Act (FMLA)</fullName>
                </value>
                <value>
                    <fullName>Harassment</fullName>
                </value>
                <value>
                    <fullName>HOA (Acquisitions)</fullName>
                </value>
                <value>
                    <fullName>HOA (Property Mgmt.)</fullName>
                </value>
                <value>
                    <fullName>HOA (Rehab)</fullName>
                </value>
                <value>
                    <fullName>Insurance (Alliant)</fullName>
                </value>
                <value>
                    <fullName>Lease Dispute / Breach of Contract</fullName>
                </value>
                <value>
                    <fullName>Liability / Injury to Third Party&apos;s Property or Rights</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Losses (Not Claimed to Insurance)</fullName>
                </value>
                <value>
                    <fullName>Mechanic Liens</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
                <value>
                    <fullName>Outside Broker / Agent Disputes</fullName>
                </value>
                <value>
                    <fullName>Personal Property Eviction</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Quiet Title Action</fullName>
                </value>
                <value>
                    <fullName>Rescission of Sale</fullName>
                </value>
                <value>
                    <fullName>SEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <inlineHelpText>This field auto-populates from the Contact&apos;s mailing city.</inlineHelpText>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Reference_Code__c</fullName>
        <formula>Portfolio__r.Yardi_Property_Code__c</formula>
        <inlineHelpText>Yardi Property Code</inlineHelpText>
        <label>Claim/Reference Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisitions</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Habitability</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Property Claims</fullName>
                </value>
                <value>
                    <fullName>Property Management / Resident Services</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Rehab</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Updates__c</fullName>
        <label># Claim Updates</label>
        <summaryForeignKey>Claim_Update__c.Claim__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <displayFormat>Claim - {0000}</displayFormat>
        <externalId>true</externalId>
        <label>Claim #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counsel_Engagement__c</fullName>
        <label>Counsel Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Court_Date__c</fullName>
        <label>Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Claim_Update__c</fullName>
        <label>Date of Most Recent Claim Update</label>
        <summarizedField>Claim_Update__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Claim_Update__c.Claim__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Defendant__c</fullName>
        <label>Defendant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Process__c</fullName>
        <label>Discovery Process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <inlineHelpText>This field auto-populates from the Contact&apos;s email address.</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Damages__c</fullName>
        <label>Estimated Damages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Legal_Fees__c</fullName>
        <label>Estimated Legal Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_of_Answer_Response__c</fullName>
        <label>Filing of Answer/Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firm_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm Old</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm_or_Company__c</fullName>
        <inlineHelpText>These firms have been approved by Corporate Legal.</inlineHelpText>
        <label>Firm or Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anastasi Jellum, P.A.</fullName>
                </value>
                <value>
                    <fullName>Briggs &amp; Morgan, PA</fullName>
                </value>
                <value>
                    <fullName>David J. Heekin, Esq.</fullName>
                </value>
                <value>
                    <fullName>Demco Law Group</fullName>
                </value>
                <value>
                    <fullName>Ginsberg Jacobs</fullName>
                </value>
                <value>
                    <fullName>Graham &amp; Dunn, PC</fullName>
                </value>
                <value>
                    <fullName>Hutchens, Senter, Kellam &amp; Pettit, PA</fullName>
                </value>
                <value>
                    <fullName>Hutchison &amp; Steffen</fullName>
                </value>
                <value>
                    <fullName>Johnson Blumberg &amp; Associates, LLC</fullName>
                </value>
                <value>
                    <fullName>Kimball, Tirey &amp; St. John, LLP</fullName>
                </value>
                <value>
                    <fullName>Leasing Law</fullName>
                </value>
                <value>
                    <fullName>Lewis Roca Rothgerber</fullName>
                </value>
                <value>
                    <fullName>Littler Mendelson</fullName>
                </value>
                <value>
                    <fullName>Lydecker Diaz</fullName>
                </value>
                <value>
                    <fullName>McKenna Long &amp; Aldridge LLP</fullName>
                </value>
                <value>
                    <fullName>Michael Geo. F. Davis</fullName>
                </value>
                <value>
                    <fullName>Mullavey, Prout, Grenley &amp; Foe, LLP</fullName>
                </value>
                <value>
                    <fullName>Neal Gerber &amp; Eisenberg</fullName>
                </value>
                <value>
                    <fullName>O&apos;Kelley &amp; Sorohan, Attorneys at Law, LLC</fullName>
                </value>
                <value>
                    <fullName>Robert L. Tankel, PA</fullName>
                </value>
                <value>
                    <fullName>Shutts &amp; Bowen</fullName>
                </value>
                <value>
                    <fullName>Silver Law Office</fullName>
                </value>
                <value>
                    <fullName>Simpson Thacher &amp; Bartlett LLP</fullName>
                </value>
                <value>
                    <fullName>Surane Law Firm</fullName>
                </value>
                <value>
                    <fullName>Venable</fullName>
                </value>
                <value>
                    <fullName>Williams, Zinman &amp; Parham PC</fullName>
                </value>
                <value>
                    <fullName>Womble Carlyle Sandridge &amp; Rice LLP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing__c</fullName>
        <label>Hearing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Claim__c</fullName>
        <label>Initial Claim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insured_Old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insured Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <label>Insured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <inlineHelpText>This field auto-populates from the Contact&apos;s mobile number.</inlineHelpText>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Claim_Update_Note__c</fullName>
        <description>The field is populated via a Trigger.  See D-00011450.</description>
        <inlineHelpText>This field auto-populates with the Note field contents on the most recently updated Claim Update.</inlineHelpText>
        <label>Most Recent Claim Update Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Claim_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Child Claim Update record having the most recent Last Modified Date.  The field is populated via a Trigger.  See D-00011450.</description>
        <inlineHelpText>This field auto-populates with a link to the last modified Claim Update record.</inlineHelpText>
        <label>Most Recent Claim Update</label>
        <referenceTo>Claim_Update__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Motion_Filed__c</fullName>
        <label>Motion Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify__c</fullName>
        <inlineHelpText>If you want to notify Brian or Todd about a new Claim, make the appropriate selection.  An email alert will be sent to them.  No email alert is sent when Corporate Legal is selected.</inlineHelpText>
        <label>Notify</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brian Neighbarger</fullName>
                </value>
                <value>
                    <fullName>Corporate Legal</fullName>
                </value>
                <value>
                    <fullName>Todd Farnsworth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <inlineHelpText>This field auto-populates from the Contact&apos;s phone number.</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plaintiff__c</fullName>
        <label>Plaintiff</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Portfolio__r.Property_City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <formula>Portfolio__r.Property_Code__c</formula>
        <inlineHelpText>Property Code (Asset Number)</inlineHelpText>
        <label>Property Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <formula>Portfolio__r.Property_County__c</formula>
        <label>Property County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>Portfolio__r.Property_State__c</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <formula>Portfolio__r.Property_Street1__c</formula>
        <label>Property Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <formula>Portfolio__r.Property_Zip_Code__c</formula>
        <label>Property Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_of_Objection__c</fullName>
        <label>Description of Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_New__c</fullName>
        <label>Market2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Old__c</fullName>
        <formula>TEXT(Portfolio__r.Region__c)</formula>
        <label>Region Old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Text__c</fullName>
        <inlineHelpText>This field is populated via workflow and is for use in Sharing Rules.</inlineHelpText>
        <label>Region Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Head__c</fullName>
        <formula>Portfolio__r.Region_Lookup__r.Regional_Head__r.Full_Name__c</formula>
        <label>Regional Head</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record__c</fullName>
        <inlineHelpText>If the Claim is related to any record other than Portfolio (i.e., Prospect or Pipeline), paste the link to that record here.</inlineHelpText>
        <label>Related Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Search_Text_Address__c</fullName>
        <label>Search Text_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Text_Yardi_Code__c</fullName>
        <label>Search Text_Yardi Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_of_Process__c</fullName>
        <label>Service of Process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Negotiations_Initiated__c</fullName>
        <label>Settlement Negotiations Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <inlineHelpText>This field auto-populates from the Contact&apos;s mailing state.</inlineHelpText>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Old__c</fullName>
        <description>When editing the values in this field, make corresponding edits to the &quot;Active or Closed?&quot; field.</description>
        <inlineHelpText>The value in this field should be changed to match whichever Key Date field is populated with a date.</inlineHelpText>
        <label>Status Old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Claim Received</fullName>
                </value>
                <value>
                    <fullName>Settlement Negotiations</fullName>
                </value>
                <value>
                    <fullName>Served Process for Lawsuit</fullName>
                </value>
                <value>
                    <fullName>Counsel Engaged</fullName>
                </value>
                <value>
                    <fullName>Dispositive Motion Pending</fullName>
                </value>
                <value>
                    <fullName>Answer Filed</fullName>
                </value>
                <value>
                    <fullName>Case Dismissed</fullName>
                </value>
                <value>
                    <fullName>Hearing Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Discovery Period</fullName>
                </value>
                <value>
                    <fullName>Awaiting Trial</fullName>
                </value>
                <value>
                    <fullName>Trial Concluded</fullName>
                </value>
                <value>
                    <fullName>In Appeal</fullName>
                </value>
                <value>
                    <fullName>Case Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Action or Litigation Against HOA / HOA Ombudsman / Mediation</fullName>
                </value>
                <value>
                    <fullName>Architectural Review / Design</fullName>
                </value>
                <value>
                    <fullName>Code / Building Violations</fullName>
                </value>
                <value>
                    <fullName>Deed Fixes</fullName>
                </value>
                <value>
                    <fullName>Dues Disputes</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>General Violations</fullName>
                </value>
                <value>
                    <fullName>HOA W9 Disputes</fullName>
                </value>
                <value>
                    <fullName>Licensure</fullName>
                </value>
                <value>
                    <fullName>Lien Payoff / Improper HOA Demand for Prior Owner&apos;s Fines</fullName>
                </value>
                <value>
                    <fullName>Liens</fullName>
                </value>
                <value>
                    <fullName>Lis Pendens</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
                <value>
                    <fullName>Permitting / Variance</fullName>
                </value>
                <value>
                    <fullName>Rental Cap</fullName>
                </value>
                <value>
                    <fullName>Rental Prohibition</fullName>
                </value>
                <value>
                    <fullName>Theft</fullName>
                </value>
                <value>
                    <fullName>Water / Flooding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Begin__c</fullName>
        <label>Trial Begin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_End__c</fullName>
        <label>Trial End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yardi_Code_Historical__c</fullName>
        <inlineHelpText>This was the Yardi code associated with this asset prior to securitization.</inlineHelpText>
        <label>Yardi Code - Historical</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <inlineHelpText>This field auto-populates from the Contact&apos;s mailing zip code.</inlineHelpText>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All_Claims</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Region_New__c</columns>
        <columns>Claim_Updates__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Claim_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Reason_of_Objection__c</columns>
        <columns>Most_Recent_Claim_Update_Note__c</columns>
        <columns>Date_of_Most_Recent_Claim_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Claims</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Claims_Active</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Region_New__c</columns>
        <columns>Claim_Updates__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Claim_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Reason_of_Objection__c</columns>
        <columns>Most_Recent_Claim_Update_Note__c</columns>
        <columns>Date_of_Most_Recent_Claim_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Claims - Active</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>